@@ -43,6 +43,7 @@ public final class Images {
     public static final String APP_LOGO_24 = "logo24x24.png";
     public static final String APP_LOGO_32 = "logo32x32.png";
     public static final String APP_LOGO_90 = "logo90x90.png";
+    public static final String APP_LOGO_150 = "logo150x150.png";
     public static final String ARROW_UP = "arrowUp.png";
     public static final String ARROW_DOWN = "arrowDown.png";
     public static final String ARTIST = "artist.png";
